turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:25: error: not found: value move
  if (move ==4){
      ^Turmite:29: error: not found: value move
  if (move==8){
      ^